# sec_edgar_client

./: .bandit.yml  .editorconfig  .gitignore  .pylintrc  CHANGELOG.md  Makefile  README.md  pyproject.toml  setup.cfg
examples/: usage.py
sec_edgar_client/: __init__.py  central_index_key.py  client.py  entities.py  parser.py  test_utils.py
sec_gov_edgar_client/: __init__.py  client.py  parser.py  test_utils.py  utils.py
tests/: conftest.py  test_central_index_key.py  test_client.py
tests/example_data/: __init__.py  ticker_to_cik_mapping.txt  z_response.json
